# DataAgent

./: CLAUDE.md  Dockerfile  README.md  compose.yaml  example.env  personal_vault.db  pyproject.toml
app/: __init__.py  config.yaml  main.py
da/: __init__.py  __main__.py  agent.py
da/context/: __init__.py  business_rules.py  semantic_model.py
da/evals/: __init__.py  run_evals.py  test_cases.py
da/scripts/: load_data.py  load_knowledge.py
da/tools/: __init__.py  learnings.py
dash/: __init__.py  __main__.py  contracts.py  embedder.py  llm.py  orchestrator.py  paths.py  router.py  runtime.py  vectordb.py
dash/context/: __init__.py  business_rules.py  semantic_model.py
dash/evals/: __init__.py  grader.py  run_evals.py  test_cases.py
dash/native/: __init__.py  contracts.py  evals.py  executor.py  guardrails.py  insights.py  learning.py  orchestrator.py  retrieval.py  router.py  runtime.py  sql_drafter.py  store.py
dash/personal/: __init__.py  contracts.py  evals.py  ingest.py  learning.py  memory.py  orchestrator.py  retrieval.py  router.py  runtime.py  store.py  sync.py  vector.py  watcher.py
dash/personal/connectors/: __init__.py  base.py  files.py  gmail.py  imessage.py  slack.py
dash/personal/tests/: test_connectors_and_vector.py  test_personal_runtime.py
dash/scripts/: __init__.py  load_knowledge.py
dash/tools/: __init__.py  introspect.py  save_query.py
db/: __init__.py  session.py  url.py
mac_app/: Package.swift  README.md
mac_app/Sources/: APIClient.swift  DashSpotlightApp.swift  HotkeyController.swift  QueryOverlayView.swift
scripts/: backfill_embeddings.py  build_image.sh  entrypoint.sh  generate_requirements.sh  railway_up.sh  sync_all.py  venv_setup.sh
