[project]
name = "vault"
version = "2.0.0"
description = "A self-learning personal data agent — indexes your messages, emails, and files locally"
requires-python = ">=3.12,<4"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Utsav Sharma" }]

dependencies = [
  "click==8.3.1",
  "fastembed>=0.4.0",
  "fastapi[standard]==0.128.0",
  "httpx==0.28.1",
  "litellm>=1.50.0",
  "openai==2.16.0",
  "opentelemetry-api==1.39.1",
  "opentelemetry-sdk==1.39.1",
  "pandas==3.0.0",
  "pgvector==0.4.2",
  "psycopg[binary]==3.3.2",
  "rich>=14.0.0",
  "sqlalchemy==2.0.46",
  "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.18.2,<2", "ruff>=0.14.1,<0.15"]

[tool.poetry]
packages = [
  { include = "dash" },
  { include = "db" },
  { include = "app" },
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
ruff = "^0.14.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [".venv*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "pandas.*", "httpx.*", "litellm.*", "fastembed.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true
